# FoglioDiCalcolo

./: .gitignore  CMakeLists.txt  FoglioDiCalcolo.cpp  FoglioDiCalcolo.h  Max.cpp  Max.h  Media.cpp  Media.h  Min.cpp  Min.h  Observer.h  Subject.h  Sum.cpp  Sum.h  main.cpp  main.h
test/: CMakeLists.txt  TestCalculate.cpp  TestFoglioDiCalcolo.cpp  runAllTests.cpp
